--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         : "袁海涛"
+  facebook         : "100005526647293"
   foursquare       :
   github           : "yuanhaitao"
   google_plus      :
