--- a/_config.yml
+++ b/_config.yml
@@ -110,7 +110,7 @@ author:
   tumblr           :
   twitter          : "yhaitao45"
   vine             :
-  weibo            : "HatimYoung"
+  weibo            : "3156351041"
   xing             :
   youtube          :
   wikipedia        :
