--- a/_config.yml
+++ b/_config.yml
@@ -101,7 +101,7 @@ author:
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/%E6%B5%B7%E6%B6%9B-%E8%A2%81-37170410a/"
+  linkedin         : "海涛-袁-37170410a"
   orcid            : # "http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
