--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Wentao Zhang's Homepage"
+title                    : "Haitao Yuan's Homepage"
 title_separator          : "-"
-name                     : &name "Wentao Zhang"
-description              : &description "Research Fellow@Mila"
-url                      : https://zwt233.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+name                     : &name "Haitao Yuan"
+description              : &description "Research Fellow@NTU"
+url                      : https://yuanhaitao.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "zwt233.github.io"
+repository               : "yuanhaitao.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 60
@@ -80,38 +80,38 @@ analytics:
 
 # Site Author
 author:
-  name             : "Wentao Zhang"
-  avatar           : "wentao3.jpg"
-  bio              : "Research Fellow@Mila"
-  location         : "Mila, Montreal, Canada"
+  name             : "Haitao Yuan"
+  avatar           : "yht.jpg"
+  bio              : "Research Fellow@NTU"
+  location         : "NTU, Singapore"
   employer         :
   pubmed           :
-  googlescholar    : https://scholar.google.com/citations?user=JE4VON0AAAAJ
-  email            : wentao.zhang@pku.edu.cn
+  googlescholar    : https://scholar.google.com/citations?user=xXeSMZQAAAAJ&hl=en
+  email            : yhaitao45@163.com
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
   codepen          :
   dribbble         :
   flickr           :
-  facebook         :
+  facebook         : "100005526647293"
   foursquare       :
-  github           : zwt233
+  github           : "yuanhaitao"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : wentao-zhang-94b267157
+  linkedin         : "海涛-袁-37170410a"
   orcid            :
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          :
+  twitter          : "yhaitao45"
   vine             :
-  weibo            :
+  weibo            : "3156351041"
   xing             :
   youtube          :
   wikipedia        :
