--- a/_config.yml
+++ b/_config.yml
@@ -111,7 +111,7 @@ author:
   tumblr           :
   twitter          : "yhaitao45"
   vine             :
-  weibo            : "3156351041"
+  weibo            : 
   xing             :
   youtube          :
   wikipedia        :
