--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@ main:
   - title: "Projects"
     url: /projects/    
     
-  - title: "Invited Talks"
-    url: /talks/   
+  # - title: "Invited Talks"
+  #   url: /talks/   
     
   - title: "Awards"
     url: /awards/    
