--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Haitao Yuan"
-  avatar           : "yht.jpeg"
+  avatar           : "yht.jpg"
   bio              : "Research Fellow@NTU"
   location         : "NTU, Singapore"
   employer         :
